--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "register-service-worker": "1.7.2",
     "vue": "2.6.14",
     "vue-class-component": "7.2.6",
-    "vue-property-decorator": "9.1.2",
+    "vue-property-decorator": "^9.1.2",
     "vue-router": "3.5.2",
     "vuex": "3.6.2"
   },
